--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -5,3 +5,9 @@ name.size=Name has an invalid length
 id.min=Id is out of range
 libraryId.null=LibraryId must not be null
 libraryId.min=LibraryId is out of range
+user.username.notnull=Username must not be null
+user.password.notnull=Password must not be null
+user.firstname.notnull=Firstname must not be null
+user.lastname.notnull=Lastname must not be null
+user.email.notnull=Email must not be null
+user.email.email=User email is not valid
