--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,3 +10,4 @@ services:
       - "8787:8787"
     volumes:
       - "./deployments:/opt/jboss/jboss-eap-7.2/standalone/deployments:rw"
+      - "./db:/opt/jboss/jboss-eap-7.2/db:rw"
