- Some additions to entities and rest resources - Secured USerService with @RolesAllowed - drop.sql disables contatraints so that invalid drop statement order produced by hibernate works

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -3,11 +3,20 @@ rest.library.null=Library must be present in body
 name.null=Name must not be null
 name.size=Name has an invalid length
 id.min=Id is out of range
-libraryId.null=LibraryId must not be null
-libraryId.min=LibraryId is out of range
-user.username.notnull=Username must not be null
-user.password.notnull=Password must not be null
-user.firstname.notnull=Firstname must not be null
-user.lastname.notnull=Lastname must not be null
-user.email.notnull=Email must not be null
-user.email.email=User email is not valid
+id.notnull=Id must not be null
+book.id.notnull=Book 'id' must not be null
+book.id.min=Book 'id' is out of range
+library.id.notnull=Library 'id' must not be null
+library.id.min=Library 'id' is out of range
+user.id.notnull=User 'id' must not be null
+user.id.min=User 'id'  is out of range
+user.username.notnull=User 'username' must not be null
+user.username.size=User 'username' has invalid size
+user.password.notnull=User 'password' must not be null
+user.password.size=User 'password' has invalid size
+user.firstname.notnull=User 'firstname' must not be null
+user.firstname.size=User 'firstname' has invalid size
+user.lastname.notnull=User 'lastname' must not be null
+user.lastname.size=User 'lastname' has invalid size
+user.email.notnull=User 'email' must not be null
+user.email.email=User 'email' is not valid
